<resources>
    <string name="app_name">BusinessCard</string>
    <string name="name">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="nome_da_empresa">Nome Da Empresa</string>
    <string name="adiciona_card">adiciona card</string>
    <string name="nome">Nome</string>
    <string name="empresa">Empresa</string>
    <string name="botao_de_close">botão de close</string>
    <string name="novo_cartao">Novo Cartão</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone_para_contato">Telefone para Contato</string>
    <string name="cor">Cor</string>
    <string name="selecionar_cor">Selecionar Cor</string>
    <string name="Cor_padrao_tv">#E64A19</string>
    <string name="label_share_to">compartilhado</string>
</resources>